<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="34sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="Name" />

        <EditText
            android:id="@+id/register_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:autofillHints="address"
            android:layout_marginEnd="32dp"/>

        <EditText
            android:id="@+id/register_cell_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/cell"
            android:inputType="phone"
            android:autofillHints="phone"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:autofillHints="email"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/button_bg"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>
